adding final touch to the sections

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MBA Admissions - SSN University</title>
+  <title>Online Application Form</title>
   
   <!-- Link Bootstrap CSS -->
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -13,15 +13,20 @@
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/admission_process.css">
+  <link rel="stylesheet" href="styles/placements.css">
+  <link rel="stylesheet" href="styles/program_highlights.css">
+  <link rel="stylesheet" href="styles/recuiters.css">
   
   <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  
-  <!-- Google Fonts (Optional) -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-  
+
+  <!-- favicon -->
+  <link rel="icon" sizes="32x32" href="https://cdn.npfs.co/uploads/college/image/5fd733b0db532817510548_logo.jpg" type="image/x-icon" >
+
 </head>
+
 <body>
 
   <!-- Header Section -->
@@ -318,8 +323,10 @@
                     <div class="card">
                         <div class="front">
                             <!-- Front view content -->
-                            <img src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/a.png" alt="Industry Oriented">
-                            <p>Industry oriented and hands-on exposure.</p>
+                             <div class="front-top">
+                                 <p>Industry oriented and hands-on exposure.</p>
+                                </div>
+                                <img src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/a.png" alt="Industry Oriented">
                         </div>
                         <div class="back">
                             <!-- Back view content or design -->
@@ -334,8 +341,10 @@
                 <div class="boxes">
                     <div class="card">
                         <div class="front">
+                            <div class="front-top">
+                                <p>Merit based admissions based on all India admission tests - CAT/XAT/CMAT/MAT.</p>
+                            </div>
                             <img src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/b.png" alt="Merit Based Admissions">
-                            <p>Merit based admissions based on all India admission tests - CAT/XAT/CMAT/MAT.</p>
                         </div>
                         <div class="back">
                             <p>Admissions are purely merit-based, ensuring a diverse and talented group of students from across the country.</p>
@@ -349,8 +358,10 @@
                 <div class="boxes">
                     <div class="card">
                         <div class="front">
+                            <div class="front-top">
+                                <p>State-of-the-art infrastructure with residential facility.</p>
+                            </div>
                             <img src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/c.png" alt="State-of-the-art Infrastructure">
-                            <p>State-of-the-art infrastructure with residential facility.</p>
                         </div>
                         <div class="back">
                             <p>Our campus features modern facilities, research labs, and residential accommodations for an enriched learning environment.</p>
@@ -366,8 +377,10 @@
                 <div class="boxes">
                     <div class="card">
                         <div class="front">
+                            <div class="front-top">
+                                <p>Holistic development of student with academics and managerial personality attributes.</p>
+                            </div>
                             <img src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/d.png" alt="Holistic Development">
-                            <p>Holistic development of student with academics and managerial personality attributes.</p>
                         </div>
                         <div class="back">
                             <p>Our program emphasizes holistic growth, including leadership, communication, and teamwork skills alongside academics.</p>
@@ -381,8 +394,10 @@
                 <div class="boxes">
                     <div class="card">
                         <div class="front">
+                            <div class="front-top">
+                                <p>Specializations in five areas of management with contemporary outlook.</p>
+                            </div>
                             <img src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/d.png" alt="Specializations">
-                            <p>Specializations in five areas of management with contemporary outlook.</p>
                         </div>
                         <div class="back">
                             <p>We offer five management specializations designed to meet current industry demands and prepare students for career success.</p>
@@ -512,6 +527,7 @@
     <!-- <div class="graph-container">
         <canvas id="progressGraph"></canvas>
     </div> -->
+    <h3>Industry focus: FMCG, IT, Banking, FinTech, Services, E-commerce, Digital……</h1>
 </div>
 
 
@@ -555,27 +571,27 @@
         <div class="steps-container">
             <div class="progress-line"></div> <!-- Vertical progress line -->
             <div class="step slide-in slide-in-right">
-                <div class="icon">&#x1F4DD;</div>
+                <img alt="icon" src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/ap1.png">
                 <h3>Step 1</h3>
                 <p>Register yourself</p>
             </div>
             <div class="step slide-in slide-in-left">
-                <div class="icon">&#x1F4F1;</div>
+                <img alt="icon" src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/ap2.png">
                 <h3>Step 2</h3>
                 <p>Verify via Email/OTP</p>
             </div>
             <div class="step slide-in slide-in-right">
-                <div class="icon">&#x1F4DD;</div>
+                <img alt="icon" src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/ap3.png">
                 <h3>Step 3</h3>
                 <p>Fill application form Online</p>
             </div>
             <div class="step slide-in slide-in-left">
-                <div class="icon">&#x1F4C4;</div>
+                <img alt="icon" src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/ap4.png">
                 <h3>Step 4</h3>
                 <p>Upload required Documents</p>
             </div>
             <div class="step slide-in slide-in-right">
-                <div class="icon">&#x1F4B3;</div>
+                <img alt="icon" src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/ap5.png">
                 <h3>Step 5</h3>
                 <p>Pay application fee</p>
             </div>
@@ -830,6 +846,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!--Js file-->
-  <script src="main.js" defer></script>
+  <script src="scripts/main.js" defer></script>
+  <script src="scripts/utils.js" defer></script>
 </body>
 </html>
