--- a/index.html
+++ b/index.html
@@ -844,7 +844,29 @@
 
   <!-- Bootstrap 3 JavaScript and jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/jquery1.12.4.min.js?1711971177"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/popper.min.js?1729057813"></script>
+  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/bootstrap.min.js?1711971177"></script>
+  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/owl.carousel.min.js?1711971177"></script>
+  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/combine.js?1711971177"></script>
+  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/common.js?1730092516"></script>
+  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/Timer.js?1729058553"></script>
+  <script src="https://cdn.npfs.co/js/ajax_request.js?1699963084"></script>
+  <script src="https://cdn.npfs.co/js/anonymous_user.js?1723120004"></script>
+  <script src="https://cdn.npfs.co/js/mobile_otp.js?1699963084"></script>
+  <script src="https://cdn.npfs.co/js/mobile_otp.js?1699963084"></script>
+  <script src="https://cdn.npfs.co/js/lib/json.js?1699963084"></script>
+  <script src="https://cdn.npfs.co/js/theme.js?1731119683"></script>
+  <script src="/js/college/moment.js?1699963084"></script>
+  <script src="/js/college/bootstrap-datetimepicker.min.js?1699963084"></script>
+  <script src="/js/college/bootstrap-datepicker.js?1699963084"></script>
+  <script src="/js/college/bootstrap-datepicker.js?1699963084"></script>
+  <script src="https://cdn.npfs.co/js/mobile_otp.js?1699963084"></script>
+  <script src="/js/college/moment.js?1699963084"></script>
+  <script src="/js/college/bootstrap-datetimepicker.min.js?1699963084"></script>
+  <script src="/js/college/bootstrap-datepicker.js?1699963084"></script>
+
   <!--Js file-->
   <script src="scripts/main.js" defer></script>
   <script src="scripts/utils.js" defer></script>
