--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <!-- Link Bootstrap JS and jQuery (required for Bootstrap 3 JavaScript) -->
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="styles/admission_process.css">
@@ -26,6 +27,10 @@
   <link rel="icon" sizes="32x32" href="https://cdn.npfs.co/uploads/college/image/5fd733b0db532817510548_logo.jpg" type="image/x-icon" >
 
 </head>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 
 <body>
 
@@ -846,27 +851,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/jquery1.12.4.min.js?1711971177"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/popper.min.js?1729057813"></script>
-  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/bootstrap.min.js?1711971177"></script>
-  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/owl.carousel.min.js?1711971177"></script>
-  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/combine.js?1711971177"></script>
-  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/common.js?1730092516"></script>
-  <script src="https://cdn.npfs.co/uploads/template/197/5714/publish/js/Timer.js?1729058553"></script>
-  <script src="https://cdn.npfs.co/js/ajax_request.js?1699963084"></script>
-  <script src="https://cdn.npfs.co/js/anonymous_user.js?1723120004"></script>
-  <script src="https://cdn.npfs.co/js/mobile_otp.js?1699963084"></script>
-  <script src="https://cdn.npfs.co/js/mobile_otp.js?1699963084"></script>
-  <script src="https://cdn.npfs.co/js/lib/json.js?1699963084"></script>
-  <script src="https://cdn.npfs.co/js/theme.js?1731119683"></script>
-  <script src="/js/college/moment.js?1699963084"></script>
-  <script src="/js/college/bootstrap-datetimepicker.min.js?1699963084"></script>
-  <script src="/js/college/bootstrap-datepicker.js?1699963084"></script>
-  <script src="/js/college/bootstrap-datepicker.js?1699963084"></script>
-  <script src="https://cdn.npfs.co/js/mobile_otp.js?1699963084"></script>
-  <script src="/js/college/moment.js?1699963084"></script>
-  <script src="/js/college/bootstrap-datetimepicker.min.js?1699963084"></script>
-  <script src="/js/college/bootstrap-datepicker.js?1699963084"></script>
-
+  
   <!--Js file-->
   <script src="scripts/main.js" defer></script>
   <script src="scripts/utils.js" defer></script>
