adding bootstrap to github

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
   <!-- Link Bootstrap CSS -->
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://itz-mehanth.github.io/mba-admissions-landing-page/node_modules/bootstrap/dist/css/bootstrap.min.css">
   
   <!-- Link Bootstrap JS and jQuery (required for Bootstrap 3 JavaScript) -->
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
