added animation to the progress line

--- a/index.html
+++ b/index.html
@@ -287,7 +287,6 @@
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#brochureModal">
         Download Brochure
     </button>
-
     
     <p>Know more about the MBA programme at SSN</p>
     <p>A comprehensive guide encompassing all necessary aspects for your management learning journey.</p>
@@ -571,35 +570,45 @@
     </div>
 </section>
 
-<section id="admission_process" class="slideUpFastEaseout">
+<section id="admission_process" class="container slideUpFastEaseout">
     <div class="admission-process">
         <h2>Admission Process</h2>
         <div class="steps-container">
             <div class="progress-line"></div> <!-- Vertical progress line -->
             <div class="step slide-in slide-in-right">
                 <img alt="icon" src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/ap1.png">
-                <h3>Step 1</h3>
-                <p>Register yourself</p>
+                <div class="step-top">
+                    <h2>Step 1</h2>
+                    <p>Register yourself</p>
+                </div>
             </div>
             <div class="step slide-in slide-in-left">
                 <img alt="icon" src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/ap2.png">
-                <h3>Step 2</h3>
-                <p>Verify via Email/OTP</p>
+                <div class="step-top">
+                    <h2>Step 2</h2>
+                    <p>Verify via Email/OTP</p>
+                </div>
             </div>
             <div class="step slide-in slide-in-right">
+                <div class="step-top">
+                    <h2>Step 3</h2>
+                    <p>Fill application form Online</p>
+                </div>
                 <img alt="icon" src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/ap3.png">
-                <h3>Step 3</h3>
-                <p>Fill application form Online</p>
             </div>
             <div class="step slide-in slide-in-left">
+                <div class="step-top">
+                    <h2>Step 4</h2>
+                    <p>Upload required Documents</p>
+                </div>
                 <img alt="icon" src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/ap4.png">
-                <h3>Step 4</h3>
-                <p>Upload required Documents</p>
             </div>
             <div class="step slide-in slide-in-right">
+                <div class="step-top">
+                    <h2>Step 5</h2>
+                    <p>Pay application fee</p>
+                </div>
                 <img alt="icon" src="https://cdn.npfs.co/uploads/template/197/5714/publish/images/ap5.png">
-                <h3>Step 5</h3>
-                <p>Pay application fee</p>
             </div>
         </div>
     </div>
@@ -650,7 +659,7 @@
   </div>
 
   <!-- FAQ Section -->
-<section class="FAQ slideUpFastEaseOut" id="FAQ">
+<section class="FAQ container slideUpFastEaseOut" id="FAQ">
     <h2>Frequently Asked Questions (FAQs)</h2>
 
     <div class="faq-item">
